--- a/aboutus.html
+++ b/aboutus.html
@@ -39,11 +39,27 @@
 
 
 
- <h1>About Us</h1>
- <img src="osva.jpg" width="100">
- <img src="santi.jpg" width="500">
+<h1>A Little About Us...</h1>
+ 
+<br> <img src="osva.jpg" width="250">
+<br>I am Osvaldo, I play for East Bay United's premier team. I have been on the team for about 2 years. (My first time playing for a club team)
+<br>I attend Oakland Technical High School.
+<br>My favorite soccer teams are Club America and FC Barcelona
+ 
 
- <p>santi - ceo</p>
+ 
+
+<p> <img src="santi.jpg" width="250"> </p>
+<br> I am Santiago, I have played soccer since I was 8
+<br>I played my first ever competitive game at the age of 14
+<br>I joined Soccer Without Borders at the age of 15 and have played for them ever since. When I turned 18 I was promoted to their UPSL team.
+<br>I also coach the younger teams at Soccer Without Borders
+<br>I love to play pick up games
+<br>My favorite team is Borrusia Dormund 
+
+
+ 
+
 
 
 
