--- a/index.html
+++ b/index.html
@@ -39,12 +39,19 @@
 
 
 
- <h1>Our Purpose</h1>
-jlhjlhjklhkj
-hello
+<h1>Our Purpose</h1>
+<p>Want to play soccer but don't know where to start? Don't worry we are here to help. We created this website to help you and your family find a club that 
+  best fits your needs; such us afordability, distance to practice, and teams that match your skill level. We believe that the development of young athletes 
+  is one of the most important parts in life and we want to help with that development. </p>
+<br>Here are a few things you can find on our website:
+
+<br>- A directory of local clubs, with filters for price, location, and age groups
+<br>- Tips for beginners and what to expect at your first practice
+<br>- Guidance on equipment and uniform costs
+<br>- Information about financial assistance
+<br>- Testimonials from families who’ve been in your shoes
 
 
-hi
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
    <script src="script.js"></script>
