--- a/TeamDatabase.html
+++ b/TeamDatabase.html
@@ -40,7 +40,22 @@
 
 
  <h1>Team Database</h1>
-
+BAYOAKS SOCCCER CLUB located at almeda soccer feild 
+<br>
+AFC  located near the local high schools around oakland such as oakland H.S/skyline H.S
+witter stadium/castrovally H.S
+<br>
+EASTSHORE ALIANCE is located in cecar chaves H.S
+<br>
+SOCCERWIHTOUTBOARDERS have 6 locations near oakland and with high school located teams such 
+Fremont H.S/ Oakland H.S /OIHS/castlemont H.S
+<br>
+MUSTANG is located in Diablo vista park/blackhalk feild
+<br>
+BALISTIC located near upper bernal/Muirwook park/creekside park/dublin sports ground.
+<br>
+ASC they are located in alameda point/encinal/hornet field/rittler park/tillman park/
+ABSC
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
    <script src="script.js"></script>
