--- a/aboutus.html
+++ b/aboutus.html
@@ -25,9 +25,6 @@
          </li>
         
          <li class="nav-item">
-           <a class="nav-link" href="Caldender.html">Calender</a>
-         </li>
-         <li class="nav-item">
            <a class="nav-link" href="tips.html">Tips</a>
          </li>
        </ul>
@@ -55,7 +52,7 @@
 <br>I joined Soccer Without Borders at the age of 15 and have played for them ever since. When I turned 18 I was promoted to their UPSL team.
 <br>I also coach the younger teams at Soccer Without Borders
 <br>I love to play pick up games
-<br>My favorite team is Borrusia Dormund 
+<br>My favorite team is Borussia Dormund 
 
 
  
