--- a/tips.html
+++ b/tips.html
@@ -37,7 +37,19 @@
 
 
 
- <h1>Tips</h1>
+ <h1>Tips/Things to expect for your first try out </h1>
+
+ coaches expect for you to be on time and ready to play after warming up.
+ <br>
+ other players that are ready to try out will not be nice to you.
+ <br>
+ you will be put in matches immediately.
+ <br>
+ depending on your skill level you will be moved to play with people similar to you.
+ <br>
+ 
+
+
 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
