--- a/TeamDatabase.html
+++ b/TeamDatabase.html
@@ -40,22 +40,24 @@
 
 
  <h1>Team Database</h1>
-BAYOAKS SOCCCER CLUB located at almeda soccer feild 
+BAYOAKS SOCCCER CLUB located at almeda soccer feild <img src="bayOaks.jpg" width="100">
 <br>
 AFC  located near the local high schools around oakland such as oakland H.S/skyline H.S
-witter stadium/castrovally H.S
+witter stadium/castrovally H.S <img src="AFC.jpg" width="100">
 <br>
-EASTSHORE ALIANCE is located in cecar chaves H.S
+EASTSHORE ALIANCE is located in cecar chaves H.S <img src="Eastshore.jpg" width="100">
 <br>
-SOCCERWIHTOUTBOARDERS have 6 locations near oakland and with high school located teams such 
-Fremont H.S/ Oakland H.S /OIHS/castlemont H.S
+SOCCER WITHOUT BOARDERS have 6 locations near oakland and with high school located teams such 
+Fremont H.S/ Oakland H.S /OIHS/castlemont H.S <img src="SWB.jpg" width="100">
 <br>
-MUSTANG is located in Diablo vista park/blackhalk feild
+MUSTANG is located in Diablo vista park/blackhalk feild <img src="mustangs.jpg" width="100">
 <br>
-BALISTIC located near upper bernal/Muirwook park/creekside park/dublin sports ground.
+BALISTIC located near upper bernal/Muirwook park/creekside park/dublin sports ground. <img src="Ballistic.jpg" width="100">
 <br>
-ASC they are located in alameda point/encinal/hornet field/rittler park/tillman park/
-ABSC
+ASC they are located in alameda point/encinal/hornet field/rittler park/tillman park/ <img src="alamedaSoccer.jpg" width="100">
+<br>
+ABSC( Albany Berkeley Soccer Club) Located in Albany Berkeley. Practice at Albany High School. <img src="ABSC.jpg" width="100">
+
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
    <script src="script.js"></script>
