tips and changes

--- a/aboutus.html
+++ b/aboutus.html
@@ -42,6 +42,7 @@
 <br>I am Osvaldo, I play for East Bay United's premier team. I have been on the team for about 2 years. (My first time playing for a club team)
 <br>I attend Oakland Technical High School.
 <br>My favorite soccer teams are Club America and FC Barcelona
+<br>Future harvard graduate.
  
 
  
