--- a/tips.html
+++ b/tips.html
@@ -39,15 +39,21 @@
 
  <h1>Tips/Things to expect for your first try out </h1>
 
- -coaches expect for you to be on time and ready to play after warming up.
+-coaches expect for you to be on time and ready to play after warming up.
  <br>
- -other players that are ready to try out will not be nice to you.
+-other players that are ready to try out will not be nice to you.
  <br>
- -you will be put in matches immediately.
+-you will be put in matches immediately.
  <br>
- -depending on your skill level you will be moved to play with people similar to you.
+-depending on your skill level you will be moved to play with people similar to you.
  <br>
- 
+-coaches have a diffrent mind set on how he wants his team to play or certian players on his team
+<br>
+-worry about how you play and not others
+<br>
+-show them your skills and show coaches why you deserve to play for them.
+<br>
+-lasty you might not make the team so dont let your self down there are always other clubs.
 
 
 
