--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h1>Our Purpose</h1>
 <p>Want to play soccer but don't know where to start? Don't worry we are here to help. We created this website to help you and your family find a club that 
   best fits your needs; such us afordability, distance to practice, and teams that match your skill level. We believe that the development of young athletes 
-  is one of the most important parts in life and we want to help with that development. </p>
+  is one of the most important parts in life and we want to help with that development. We want to help you get out of the Pay-to-Play model that the US has.</p>
 <br>Here are a few things you can find on our website:
 
 <br>- A directory of local clubs, with filters for price, location, and age groups
@@ -47,6 +47,10 @@
 <br>- Guidance on equipment and uniform costs
 <br>- Information about financial assistance
 <br>- Testimonials from families who’ve been in your shoes
+
+
+
+
 
 
 
