--- a/tips.html
+++ b/tips.html
@@ -38,7 +38,8 @@
 
 
  <h1>Tips/Things to expect for your first try out </h1>
-
+<br> <img src="tryouts.jpg" width="350">
+ <br>
 -coaches expect for you to be on time and ready to play after warming up.
  <br>
 -other players that are ready to try out will not be nice to you.
@@ -54,6 +55,7 @@
 -show them your skills and show coaches why you deserve to play for them.
 <br>
 -lasty you might not make the team so dont let your self down there are always other clubs.
+<br> <img src="dominate.jpg" width="300">
 
 
 
