--- a/TeamDatabase.html
+++ b/TeamDatabase.html
@@ -33,28 +33,77 @@
    </div>
  </nav> 
 </nav>   
+<h1>Team Database</h1>
+<p></p>
+
+<div class="container text-center">
+  <div class="row">
+    <div class="col border"> <Br>East Bay United Soccer Club </Br><img src="bayOaks.jpg" width="100" >
+    </div>
+    <div class="col border">Fields: Alameda Community Collge Soccer field <br> Emeryville Center of Community Life <br>Raymondi Park</div>
+    <div class="col border">Boys & Girls Age Groups:<br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7</div>
+    <div class="col border">Compettitive Teams: <br> ECRL <br> NPL <br> Premier <br> Blue</div>
+  </div>
+  <div class="row">
+    <div class="col border">Association Football Club <br> <img src="AFC.jpg" width="100"></div>
+    <div class="col border">Fields: Oakland High School <br> Skyline High School <br>Merrit College <br> Witter Field (Piedmont H.S) <br> Pepsi Field <br> Castro Valley High School</div>
+    <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br>U14 / U13 </div>
+    <div class="col border">Teams: <br> </div>
+  </div>  <div class="row">
+    <div class="col border">Eastshore Alliance <br> <img src="Eastshore.jpg" width="100"></div>
+    <div class="col border">Fields: El Cerrito High School <br> Gilman Fields</div>
+    <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7 </div>
+    <div class="col border">col</div>
+  </div>
+  <div class="row">
+    <div class="col border">Soccer Without Borders <br> <img src="SWB.jpg" width="100"></div>
+    <div class="col border">Fields: Fremont High School <br> Oakland High School <br> Oakland International High School <br> Castlemont High School <br> Oakland Technical High School</div>
+    <div class="col border">Boys & Girls Age Groups: <br> Men Groups <br> U19 / U17 <br> U16 / U15 <br> U14</div>
+    <div class="col border">col</div>
+  </div>
+  <div class="row">
+    <div class="col border">Mustangs Soccer Club <br> <img src="mustangs.jpg" width="100"></div>
+    <div class="col border">Fields: Diablo Vista Park <br> Muscle Milk Field <br> Alamo Elementary <br> Blackhawk Field <br> Diablo Vista Middle School </div>
+    <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7</div>
+    <div class="col border">col</div>
+  </div>
+  <div class="row">
+    <div class="col border">Ballistc United Soccer Club <br> <img src="Ballistic.jpg" width="100"></div>
+    <div class="col border">Fields: Muirwood Park <br> Upper Bernal <br> Creekside Park <br> Standord Medicine Sports <br> Dublin Sports Grounds  </div>
+    <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7</div>
+    <div class="col border">col</div>
+  </div>
+  <div class="row">
+    <div class="col border">Alameda Soccer Club <br> <img src="alamedaSoccer.jpg" width="100"></div>
+    <div class="col border">Fields: Alameda Point <br> Encinal <br> Hornet Field <br> Rittler Park <br> Tillman Park </div>
+    <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7 <br> U6</div>
+    <div class="col border">col</div>
+  </div>
+  <div class="row">
+    <div class="col border">Albany Berkeley Soccer Club <br> <img src="ABSC.jpg" width="100"></div>
+    <div class="col border">Fields: Albany High School <br> Gilman Fields <br> Grove Park</div>
+    <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7 <br> U6 / U5 <br> U4 / U3</div>
+    <div class="col border">col</div>
+  </div>
+  <div class="row">
+    <div class="col border">Oakland Soccer Club <br> <img src="oaklandsoccer.jpg" width="100"></div>
+    <div class="col border">Fields: Fremont High School <br> Cesar Chavez Fields</div>
+    <div class="col border">Boys & Girls Age Groups:  <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7</div>
+    <div class="col border">col</div>
+  </div>
+  <div class="row">
+    <div class="col border">Oakland Genesis Soccer Club <br> <img src="oaklandGenesis.jpg" width="100"></div>
+    <div class="col border">Fields: Maddison Park Acadamy </div>
+    <div class="col border">Boys & Girls Age Groups: <br> 6th - 12th Grade</div>
+    <div class="col border">col</div>
+  </div>
+</div>
 
 
 
 
- <h1>Team Database</h1>
-BAYOAKS SOCCCER CLUB located at almeda soccer feild <img src="bayOaks.jpg" width="100">
-<br>
-AFC  located near the local high schools around oakland such as oakland H.S/skyline H.S
-witter stadium/castrovally H.S <img src="AFC.jpg" width="100">
-<br>
-EASTSHORE ALIANCE is located in cecar chaves H.S <img src="Eastshore.jpg" width="100">
-<br>
-SOCCER WITHOUT BOARDERS have 6 locations near oakland and with high school located teams such 
-Fremont H.S/ Oakland H.S /OIHS/castlemont H.S <img src="SWB.jpg" width="100">
-<br>
-MUSTANG is located in Diablo vista park/blackhalk feild <img src="mustangs.jpg" width="100">
-<br>
-BALISTIC located near upper bernal/Muirwook park/creekside park/dublin sports ground. <img src="Ballistic.jpg" width="100">
-<br>
-ASC they are located in alameda point/encinal/hornet field/rittler park/tillman park/ <img src="alamedaSoccer.jpg" width="100">
-<br>
-ABSC( Albany Berkeley Soccer Club) Located in Albany Berkeley. Practice at Albany High School. <img src="ABSC.jpg" width="100">
+
+
 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
