--- a/TeamDatabase.html
+++ b/TeamDatabase.html
@@ -43,7 +43,7 @@
     <div class="col border">Fields: Alameda Community Collge Soccer field <br> Emeryville Center of Community Life <br>Raymondi Park</div>
     <div class="col border">Boys & Girls Age Groups:<br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7</div>
     <div class="col border">Compettitive Teams: <br> ECRL <br> NPL <br> Premier <br> Blue</div>
-    <div class="col border">col</div>
+    <div class="col border"><a href="https://www.ebusoccer.org/">more information</a></div>
   </div>
   
   <div class="row">
@@ -51,14 +51,14 @@
     <div class="col border">Fields: Oakland High School <br> Skyline High School <br>Merrit College <br> Witter Field (Piedmont H.S) <br> Pepsi Field <br> Castro Valley High School</div>
     <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br>U14 / U13 </div>
     <div class="col border">Compettitive Teams: <br>ECNL <br> ECRL <br>NPL <br>premier </div>  
-    <div class="col border">col</div>
+    <div class="col border"><a href="https://www.associationfc.org/">more information</a></div>
  
     </div>  <div class="row">
     <div class="col border">Eastshore Alliance <br> <img src="Eastshore.jpg" width="100"></div>
     <div class="col border">Fields: El Cerrito High School <br> Gilman Fields</div>
     <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7 </div>
     <div class="col border">Compettitive  Teams: <br> NPl <br>premier <br> NORCAL GOLD </div>
-    <div class="col border">col</div>
+    <div class="col border"><a href="https://www.associationfc.org/">more information</a></div>
   </div>
  
   <div class="row">
@@ -66,49 +66,49 @@
     <div class="col border">Fields: Fremont High School <br> Oakland High School <br> Oakland International High School <br> Castlemont High School <br> Oakland Technical High School</div>
     <div class="col border">Boys & Girls Age Groups: <br> Men Groups <br> U19 / U17 <br> U16 / U15 <br> U14</div>
     <div class="col border">Compettitive Teams: <br> UPSL MENS <br> Gold </div>
-    <div class="col border">col</div>
+    <div class="col border"><a href="https://www.soccerwithoutborders.org/bay-area">more information</a></div>
   </div>
   <div class="row">
     <div class="col border">Mustangs Soccer Club <br> <img src="mustangs.jpg" width="100"></div>
     <div class="col border">Fields: Diablo Vista Park <br> Muscle Milk Field <br> Alamo Elementary <br> Blackhawk Field <br> Diablo Vista Middle School </div>
     <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7</div>
     <div class="col border">Compettitive Teams: <br> MLS <br> ECNL <br> ECRL <br> NPL <br> Premier <br> GOLD</div> 
-    <div class="col border">col</div>
+    <div class="col border"><a href="https://mustangsoccer.com/">more information</a></div>
   </div>
   <div class="row">
     <div class="col border">Ballistc United Soccer Club <br> <img src="Ballistic.jpg" width="100"></div>
     <div class="col border">Fields: Muirwood Park <br> Upper Bernal <br> Creekside Park <br> Standord Medicine Sports <br> Dublin Sports Grounds  </div>
     <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7</div>
     <div class="col border">Compettitive Team: <br> MLS next <br> ECNl <br> NPL <br> GOLD</div> 
-    <div class="col border">col</div>
+    <div class="col border"><a href="https://busc.org/">more information</a></div>
   </div>
   <div class="row">
     <div class="col border">Alameda Soccer Club <br> <img src="alamedaSoccer.jpg" width="100"></div>
     <div class="col border">Fields: Alameda Point <br> Encinal <br> Hornet Field <br> Rittler Park <br> Tillman Park </div>
     <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7 <br> U6</div>
     <div class="col border">Compettitive  Teams: <br> NPL <br> GOLD </div>
-    <div class="col border">col</div>
+    <div class="col border"><a href="https://www.alamedasoccer.org/">more information</a></div>
   </div>
   <div class="row">
     <div class="col border">Albany Berkeley Soccer Club <br> <img src="ABSC.jpg" width="100"></div>
     <div class="col border">Fields: Albany High School <br> Gilman Fields <br> Grove Park</div>
     <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7 <br> U6 / U5 <br> U4 / U3</div>
     <div class="col border">Compettitive Teams: <br> NPL <br> Premeir <br> GOLD </div>
-    <div class="col border">col</div>
+    <div class="col border"><a href="https://www.abscsoccer.org/">more information</a></div>
   </div>
   <div class="row">
     <div class="col border">Oakland Soccer Club <br> <img src="oaklandsoccer.jpg" width="100"></div>
     <div class="col border">Fields: Fremont High School <br> Cesar Chavez Fields</div>
     <div class="col border">Boys & Girls Age Groups:  <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7</div>
     <div class="col border">Compettitve Teams: <br> Premeir <br> GOLD <br> SILVER</div> 
-    <div class="col border">col</div>
+    <div class="col border"><a href="https://www.oaklandsoccer.org/">more information</a></div>
   </div>
   <div class="row">
     <div class="col border">Oakland Genesis Soccer Club <br> <img src="oaklandGenesis.jpg" width="100"></div>
     <div class="col border">Fields: Maddison Park Acadamy </div>
     <div class="col border">Boys & Girls Age Groups: <br> 6th - 12th Grade</div>
     <div class="col border">Compettitive Teams: <br> ECNL <br> Premeir <br> Gold </div>
-    <div class="col border">col</div>
+    <div class="col border"><a href="https://www.oaklandgenesis.org/">more information</a></div>
   </div>
 </div>
 
