--- a/TeamDatabase.html
+++ b/TeamDatabase.html
@@ -58,7 +58,7 @@
     <div class="col border">Fields: El Cerrito High School <br> Gilman Fields</div>
     <div class="col border">Boys & Girls Age Groups: <br> U19 / U17 <br> U16 / U15 <br> U14 / U13 <br> U12 / U11 <br> U10 / U9 <br> U8 / U7 </div>
     <div class="col border">Compettitive  Teams: <br> NPl <br>premier <br> NORCAL GOLD </div>
-    <div class="col border"><a href="https://www.associationfc.org/">more information</a></div>
+    <div class="col border"><a href="https://www.eastshorealliancefc.org/">more information</a></div>
   </div>
  
   <div class="row">
