--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+   <link rel="stylesheet" href="aboutUS.css">
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,23 +38,30 @@
 
 
 <h1>A Little About Us...</h1>
- 
-<br> <img src="osva.jpg" width="250">
-<br>I am Osvaldo, I play for East Bay United's premier team. I have been on the team for about 2 years. (My first time playing for a club team)
-<br>I attend Oakland Technical High School.
-<br>My favorite soccer teams are Club America and FC Barcelona
-<br>Future harvard graduate.
- 
+<div class="container text-center">
+  <div class="row">
+    <div class="col border"> <img src="osva.jpg" width="250"></div>
+    <div id = "osvadiv" class="col border"><br>I am Osvaldo, I play for East Bay United's premier team. I have been on the team for about 2 years. (My first time playing for a club team)
+      <br>I attend Oakland Technical High School.
+      <br>My favorite soccer teams are Club America and FC Barcelona
+      <br>Future harvard graduate.</div>
+  </div>
+
+
+
+<p><div class="container text-center">
+  <div class="row">
+    <div class="col border"><br> I am Santiago, I have played soccer since I was 8
+      <br>I played my first ever competitive game at the age of 14
+      <br>I joined Soccer Without Borders at the age of 15 and have played for them ever since. When I turned 18 I was promoted to their UPSL team.
+      <br>I also coach the younger teams at Soccer Without Borders
+      <br>I love to play pick up games
+      <br>My favorite team is Borussia Dormund </div>
+    <div class="col border"><img src="santi.jpg" width="250"></div>
+  </div></p>
 
  
 
-<p> <img src="santi.jpg" width="250"> </p>
-<br> I am Santiago, I have played soccer since I was 8
-<br>I played my first ever competitive game at the age of 14
-<br>I joined Soccer Without Borders at the age of 15 and have played for them ever since. When I turned 18 I was promoted to their UPSL team.
-<br>I also coach the younger teams at Soccer Without Borders
-<br>I love to play pick up games
-<br>My favorite team is Borussia Dormund 
 
 
  
