--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <br>- Information about financial assistance
 <br>- Testimonials from families who’ve been in your shoes
 
+<div id="city Youth"> <p><img src="youthPurpose.jpg" width="500"></p>
 
 
 
